--- a/src/styles/OrderSummary.css
+++ b/src/styles/OrderSummary.css
@@ -6,6 +6,12 @@
     z-index: 99;
 }
 
+@media screen and (max-width: 860px){
+    section.order-summary {
+        width: 100%;
+        left: 0;
+    }
+}
 
     .order-summary--inner {
         background-color: #fff;
@@ -199,6 +205,7 @@ span.price--extra-addon {
 }
 
 @media screen and (max-width: 960px){
+
     .payment-wrapper .order-summary{
         max-width: 100%;
     }
